// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatutDetaillee Action Nouvelle 1`] = `
Array [
  <div
    className="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded min-w-fit"
    data-test="Badge-ActionStatutBadge"
  >
    <span
      className="text-primary-7 font-bold leading-4 text-left mt-0.5 text-sm uppercase"
    >
      Détaillé
    </span>
  </div>,
  <div
    className="mt-2"
  >
    <p
      className="mb-0.5 text-sm whitespace-nowrap"
    >
      Fait: 
      20
       %
    </p>
    <p
      className="mb-0.5 text-sm whitespace-nowrap"
    >
      Programmé: 
      30
       %
    </p>
    <p
      className="mb-0 text-sm whitespace-nowrap"
    >
      Pas fait: 
      50
       %
    </p>
  </div>,
]
`;

exports[`Storyshots app/pages/collectivite/Historique/actionStatut/ActionStatutDetaillee Action Precedente 1`] = `
Array [
  <div
    className="bg-primary-2 border-primary-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded min-w-fit line-through"
    data-test="Badge-ActionStatutBadge"
  >
    <span
      className="text-primary-7 font-bold leading-4 text-left mt-0.5 text-sm uppercase"
    >
      Détaillé
    </span>
  </div>,
  <div
    className="mt-2"
  >
    <p
      className="mb-0.5 text-sm whitespace-nowrap line-through"
    >
      Fait: 
      10
       %
    </p>
    <p
      className="mb-0.5 text-sm whitespace-nowrap line-through"
    >
      Programmé: 
      0
       %
    </p>
    <p
      className="mb-0 text-sm whitespace-nowrap line-through"
    >
      Pas fait: 
      0
       %
    </p>
  </div>,
]
`;
